Fix touch and save

--- a/sketchPad.css
+++ b/sketchPad.css
@@ -69,6 +69,17 @@ html {
     left: 360;
 }
 
+#saveButton {
+    background-color: blue;
+    height: 60px;
+    width: 60px;
+    border: none;
+    z-index: 1;
+    position: absolute;
+    top: 8;
+    left: 430;
+}
+
 #container {
     position: relative;
 }
